charts/kubectl/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: k3s-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      name: http
      number: 80
      protocol: HTTP2
    hosts:
    - 'maicondev.com'
    - 'www.maicondev.com'
    - 'kupping.maicondev.com'
    - 'kuppingbackend.maicondev.com'
    tls:
      httpsRedirect: true
  - port:
      name: https
      number: 443
      protocol: HTTPS
    hosts:
    - 'maicondev.com'
    - 'www.maicondev.com'
    - 'kupping.maicondev.com'
    - 'kuppingbackend.maicondev.com'
    tls:
      mode: PASSTHROUGH
